--- a/style.css
+++ b/style.css
@@ -222,3 +222,11 @@ padding: 45px 30px;
 
 
 }
+@media only screen and (max-width: 430px){
+    .time{
+        margin: 0 0 0 15px;
+    }
+    .data{
+      padding: 0  35px;
+    }
+}
